fix: add CSRF protection, path traversal fix, and restrict extension permissions
  Security improvements for local use:
  - CSRF middleware validates Origin header on state-changing requests
  - find_capsule_file() rejects path traversal attempts
  - Browser extension no longer requests <all_urls> permission

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/sieve"]
 
+[tool.hatch.build.targets.sdist]
+include = ["/src/sieve"]
+
 [tool.ruff]
 line-length = 100
 target-version = "py311"
