--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,7 @@
   "description": "Capture high-signal knowledge to your Neural Sieve vault",
   "version": "0.1.0",
   "permissions": ["activeTab", "scripting", "contextMenus"],
-  "host_permissions": ["http://127.0.0.1:8420/*", "<all_urls>"],
+  "host_permissions": ["http://127.0.0.1:8420/*"],
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
